<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_TextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/id_button"
        android:layout_width="147dp"
        android:layout_height="133dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/circleshape"
        android:color="@android:color/holo_orange_dark"
        android:text="@string/id_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_textView"
        android:text="@string/id_textView"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/joke_1"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_1"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_2"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_2"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_3"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_3"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_4"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_4"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_5"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_5"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_6"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_6"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_7"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_7"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_8"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_8"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_9"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_9"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/joke_10"
        android:layout_width="324dp"
        android:layout_height="413dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="247dp"
        android:text="@string/joke_10"
        app:layout_constraintBottom_toTopOf="@+id/id_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:visibility="invisible"/>

</RelativeLayout>